--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -14,16 +14,32 @@
       <span class="navbar-brand mb-0 h1">Home</span>
     </div>
   </nav>
-    <h1 class="text-center text-success">Register</h1>
+    <h1 class="text-center text-success">Register Form</h1>
     <div class="container-fluid">
         <form class="row g-3">
             <div class="col-md-6">
-              <label for="inputEmail4" class="form-label">Email</label>
+              <label for="" class="form-label">First Name</label>
+              <input type="text" class="form-control" id="">
+            </div>
+            <div class="col-md-6">
+              <label for="" class="form-label">Last Name</label>
+              <input type="text" class="form-control" id="">
+            </div>
+            <div class="col-md-6">
+              <label for="" class="form-label">Email</label>
               <input type="email" class="form-control" id="inputEmail4">
             </div>
             <div class="col-md-6">
-              <label for="inputPassword4" class="form-label">Password</label>
-              <input type="password" class="form-control" id="inputPassword4">
+              <label for="" class="form-label">UserName</label>
+              <input type="text" class="form-control" id="">
+            </div>
+            <div class="col-md-6">
+              <label for="" class="form-label">Password</label>
+              <input type="password" class="form-control" id="">
+            </div>
+            <div class="col-md-6">
+              <label for="" class="form-label">Confirm password</label>
+              <input type="password" class="form-control" id="">
             </div>
             <div class="col-12">
               <label for="inputAddress" class="form-label">Address</label>
@@ -57,7 +73,7 @@
               </div>
             </div>
             <div class="col-12">
-              <button type="submit" class="btn btn-primary">Sign in</button>
+              <button type="submit" class="btn btn-success btn-lg">Sign in</button>
             </div>
           </form>
     </div>
