--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -14,7 +14,7 @@
       <span class="navbar-brand mb-0 h1">Home</span>
     </div>
   </nav>
-    <h1 class="text-center text-success">Register</h1>
+    <h1 class="text-center text-success">Register Form</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   </body>
 </html>
