--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -16,14 +16,15 @@
   </nav>
     <h1 class="text-center text-success">Register Form</h1>
     <div class="container-fluid">
-        <form class="row g-3">
+        <form action="{% url "register" %}" method="POST" class="row g-3">
+          {% csrf_token %}
             <div class="col-md-6">
               <label for="" class="form-label">First Name</label>
-              <input type="text" class="form-control" id="">
+              <input type="first_name" class="form-control" id="">
             </div>
             <div class="col-md-6">
               <label for="" class="form-label">Last Name</label>
-              <input type="text" class="form-control" id="">
+              <input type="last_name" class="form-control" id="">
             </div>
             <div class="col-md-6">
               <label for="" class="form-label">Email</label>
@@ -31,7 +32,7 @@
             </div>
             <div class="col-md-6">
               <label for="" class="form-label">UserName</label>
-              <input type="text" class="form-control" id="">
+              <input type="username" class="form-control" id="">
             </div>
             <div class="col-md-6">
               <label for="" class="form-label">Password</label>
@@ -39,30 +40,7 @@
             </div>
             <div class="col-md-6">
               <label for="" class="form-label">Confirm password</label>
-              <input type="password" class="form-control" id="">
-            </div>
-            <div class="col-12">
-              <label for="inputAddress" class="form-label">Address</label>
-              <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-            </div>
-            <div class="col-12">
-              <label for="inputAddress2" class="form-label">Address 2</label>
-              <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
-            </div>
-            <div class="col-md-6">
-              <label for="inputCity" class="form-label">City</label>
-              <input type="text" class="form-control" id="inputCity">
-            </div>
-            <div class="col-md-4">
-              <label for="inputState" class="form-label">State</label>
-              <select id="inputState" class="form-select">
-                <option selected>Choose...</option>
-                <option>...</option>
-              </select>
-            </div>
-            <div class="col-md-2">
-              <label for="inputZip" class="form-label">Zip</label>
-              <input type="text" class="form-control" id="inputZip">
+              <input type="confirm_password" class="form-control" id="">
             </div>
             <div class="col-12">
               <div class="form-check">
@@ -76,6 +54,14 @@
               <button type="submit" class="btn btn-success btn-lg">Sign in</button>
             </div>
           </form>
+
+          <div class="form-group">
+              {% for message in messages %}
+            <div class="alert alert-danger" role="alert">
+              {{message}}
+            </div>
+            {% endfor %}
+          </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   </body>
