--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -11,10 +11,30 @@
 <!-- As a heading -->
 <nav class="navbar bg-dark navbar-dark">
     <div class="container-fluid">
-      <span class="navbar-brand mb-0 h1">Home</span>
+      <span class="navbar-brand mb-0 h1">NavBar</span>
     </div>
   </nav>
-    <h1 class="text-center text-success">Register Form</h1>
+    <h1 class="text-center text-success">Welcome</h1>
+    <div class="container-fluid">    
+    {% if request.user.is_authenticated %}
+    <p class="h6 text-success">You are Logged In</p>
+    <p class="h6 text-success">Username : {{ request.user.username}}</p>
+    <p class="text-info">First Name : {{ request.user.first_name}}</p>
+    <p class="text-info">Last Name : {{ request.user.last_name}}</p>
+
+    <a href={% url 'logout_user' %} type="button" class="btn btn-success btn-lg">Log out</a>
+     {% else %} 
+
+        
+         <!--<a href={% url 'logout_user' %} type="button" class="btn btn-success btn-lg">Log out</a>-->
+        <p class="text-danger h3"> User is not logged in.</p>
+        <a href={% url 'register' %} type="button" class="btn btn-success btn-lg">Create account</a>
+     {% endif %}
+  
+  
+  </div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   </body>
 </html>
