--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -14,55 +14,31 @@
       <span class="navbar-brand mb-0 h1">Home</span>
     </div>
   </nav>
-    <h1 class="text-center text-success">Login Page</h1>
+    <h1 class="text-center text-success">Welcolme</h1>
+    {% if request.user.is_authenticated %}
+    <p class="text-success">You are Logged In</p>
+    <p class="text-success">Username : {{ request.user.username}}</p>
+     {% else %} 
+        <p class="text-danger h3"> User is not logged in.</p>
+    {% endif %}
+
     <div class="container-fluid">
-        <form>
+        <form action="{% url "login_user" %}" method="POST">
+            {% csrf_token %}
             <div class="row mb-3">
-              <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+              <label for="inputEmail3" class="col-sm-2 col-for m-label">Username</label>
               <div class="col-sm-10">
-                <input type="email" class="form-control" id="inputEmail3">
+                <input name="username" type="text" class="form-control" id="">
               </div>
             </div>
             <div class="row mb-3">
               <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
               <div class="col-sm-10">
-                <input type="password" class="form-control" id="inputPassword3">
+                <input name="password" type="password" class="form-control" id="inputPassword3">
               </div>
             </div>
-            <fieldset class="row mb-3">
-              <legend class="col-form-label col-sm-2 pt-0">Radios</legend>
-              <div class="col-sm-10">
-                <div class="form-check">
-                  <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
-                  <label class="form-check-label" for="gridRadios1">
-                    First radio
-                  </label>
-                </div>
-                <div class="form-check">
-                  <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
-                  <label class="form-check-label" for="gridRadios2">
-                    Second radio
-                  </label>
-                </div>
-                <div class="form-check disabled">
-                  <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3" disabled>
-                  <label class="form-check-label" for="gridRadios3">
-                    Third disabled radio
-                  </label>
-                </div>
-              </div>
-            </fieldset>
-            <div class="row mb-3">
-              <div class="col-sm-10 offset-sm-2">
-                <div class="form-check">
-                  <input class="form-check-input" type="checkbox" id="gridCheck1">
-                  <label class="form-check-label" for="gridCheck1">
-                    Example checkbox
-                  </label>
-                </div>
-              </div>
-            </div>
-            <button type="submit" class="btn btn-primary">Sign in</button>
+            
+            <button type="submit" class="btn btn-primary">Log in</button>
           </form>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
