--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -11,10 +11,10 @@
 <!-- As a heading -->
 <nav class="navbar bg-dark navbar-dark">
     <div class="container-fluid">
-      <span class="navbar-brand mb-0 h1">Home</span>
+      <span class="navbar-brand mb-0 h1">Login page</span>
     </div>
   </nav>
-    <h1 class="text-center text-success">Welcolme</h1>
+    <h1 class="text-center text-success">Register App</h1>
     {% if request.user.is_authenticated %}
     <p class="text-success">You are Logged In</p>
     <p class="text-success">Username : {{ request.user.username}}</p>
