--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -5,34 +5,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Welcome to my app </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  
+    <style>
+      .side-container {
+          background-color: rgb(0, 0, 0);
+          height: 100vh;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          padding: 20px;
+      }
+
+      .content-container {
+          background-color: rgb(255, 255, 255);
+          padding: 20px;
+          text-align: center;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center; 
+          height: 100vh;
+      }
+
+      .side-image {
+            width: 100%;
+            height: auto;
+        }
+
+        
+  </style>
+  
   </head>
   <body>
 
 <!-- As a heading -->
 <nav class="navbar bg-dark navbar-dark">
-    <div class="container-fluid">
+  <div class="container-fluid">
       <span class="navbar-brand mb-0 h1">NavBar</span>
-    </div>
-  </nav>
-    <h1 class="text-center text-success">Welcome</h1>
-    <div class="container-fluid">    
-    {% if request.user.is_authenticated %}
-    <p class="h6 text-success">You are Logged In</p>
-    <p class="h6 text-success">Username : {{ request.user.username}}</p>
-    <p class="text-info">First Name : {{ request.user.first_name}}</p>
-    <p class="text-info">Last Name : {{ request.user.last_name}}</p>
-
-    <a href={% url 'logout_user' %} type="button" class="btn btn-success btn-lg">Log out</a>
-     {% else %} 
-
-        
-         <!--<a href={% url 'logout_user' %} type="button" class="btn btn-success btn-lg">Log out</a>-->
-        <p class="text-danger h3"> User is not logged in.</p>
-        <a href={% url 'register' %} type="button" class="btn btn-success btn-lg">Create account</a>
-     {% endif %}
-  
-  
   </div>
+</nav>
+
+<div class="container-fluid">
+  <div class="row">
+      <div class="col-sm-3 side-container">
+          <!-- Side area content goes here -->
+          <img src="https://images.unsplash.com/photo-1688325584752-889090a6a9fa?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=686&q=80" alt="Side Image" class="side-image">
+      </div>
+      <div class="col-sm-6 content-container">
+          <!-- Content area -->
+          <h1 class="text-center">Welcome to my app</h1>
+          <h1 class="text-center">Sign in to Continue.</h1>
+          {% if request.user.is_authenticated %}
+          <p class="h6 text-success">You are Logged In</p>
+          <p class="h6 text-success">Username: {{ request.user.username }}</p>
+          <p class="text-info">First Name: {{ request.user.first_name }}</p>
+          <p class="text-info">Last Name: {{ request.user.last_name }}</p>
+          <a href={% url 'logout_user' %} class="btn btn-success btn-lg">Log out</a>
+          {% else %}
+          <p class="text-danger">User is not logged in.</p>
+          <p>Don't have an account? <a href={% url 'register' %} style="color: black;">Create an account</a></p>
+          <p>It takes only a minute.</p>
+          {% endif %}
+          <a href={% url 'login_user' %} type="button" class="btn btn-secondary">Sign in</a>
+      </div>
+      <div class="col-sm-3 side-container">
+          <!-- Side area content goes here -->
+          <img src="https://images.unsplash.com/photo-1688325584752-889090a6a9fa?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=686&q=80" alt="Side Image" class="side-image">
+      </div>
+  </div>
+</div>
+  
+     
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
