--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -14,7 +14,7 @@
       <span class="navbar-brand mb-0 h1">Home</span>
     </div>
   </nav>
-    <h1 class="text-center text-success">Register Form</h1>
+    <h1 class="text-center text-success">Register App</h1>
     <div class="container-fluid">
         <form action="{% url "register" %}" method="POST" class="row g-3">
           {% csrf_token %}
