--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -5,42 +5,99 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Welcome to my app </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  
+    <style>
+      .side-container {
+          background-color: rgb(0, 0, 0);
+          height: 100vh;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          padding: 20px;
+      }
+
+      .content-container {
+          background-color: rgb(255, 255, 255);
+          padding: 20px;
+          text-align: center;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center; 
+          height: 100vh;
+      }
+
+      .side-image {
+            width: 100%;
+            height: auto;
+        }
+
+        
+  </style>
+  
   </head>
   <body>
 
 <!-- As a heading -->
 <nav class="navbar bg-dark navbar-dark">
-    <div class="container-fluid">
-      <span class="navbar-brand mb-0 h1">Login page</span>
-    </div>
-  </nav>
-    <h1 class="text-center text-success">Register App</h1>
-    {% if request.user.is_authenticated %}
-    <p class="text-success">You are Logged In</p>
-    <p class="text-success">Username : {{ request.user.username}}</p>
-     {% else %} 
-        <p class="text-danger h3"> User is not logged in.</p>
-    {% endif %}
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">Home</a>
+  </div>
+</nav>
 
-    <div class="container-fluid">
-        <form action="{% url "login_user" %}" method="POST">
-            {% csrf_token %}
-            <div class="row mb-3">
-              <label for="inputEmail3" class="col-sm-2 col-for m-label">Username</label>
-              <div class="col-sm-10">
-                <input name="username" type="text" class="form-control" id="">
-              </div>
-            </div>
-            <div class="row mb-3">
-              <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
-              <div class="col-sm-10">
-                <input name="password" type="password" class="form-control" id="inputPassword3">
-              </div>
-            </div>
-            
-            <button type="submit" class="btn btn-primary">Log in</button>
-          </form>
-    </div>
+<div class="container-fluid">
+  <div class="row">
+      <div class="col-sm-3 side-container">
+          <!-- Side area content goes here -->
+          <img src="https://images.unsplash.com/photo-1688325584752-889090a6a9fa?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=686&q=80" alt="Side Image" class="side-image">
+      </div>
+      <div class="col-sm-6 content-container">
+          <!-- Content area -->
+          <h1 class="text-center">Welcome to my app</h1>
+          
+          {% if request.user.is_authenticated %}
+          <p class="text-success">You are Logged In</p>
+          <p class="text-success">Username : {{ request.user.username}}</p>
+           {% else %} 
+              <p class="text-danger"> User is not logged in.</p>
+          {% endif %}
+      
+          <div class="container-fluid">
+              <form action="{% url "login_user" %}" method="POST">
+                  {% csrf_token %}
+                  <div class="row mb-3">
+                    <label for="inputEmail3" class="col-sm-2 col-for m-label">Username</label>
+                    <div class="col-sm-10">
+                      <input name="username" type="text" class="form-control" id="">
+                    </div>
+                  </div>
+                  <div class="row mb-3">
+                    <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+                    <div class="col-sm-10">
+                      <input name="password" type="password" class="form-control" id="inputPassword3">
+                    </div>
+                  </div>
+                  
+                  <button type="submit" class="btn btn-secondary">Log in</button>
+                </form>
+          </div>
+
+
+
+          
+      </div>
+      <div class="col-sm-3 side-container">
+          <!-- Side area content goes here -->
+          <img src="https://images.unsplash.com/photo-1688325584752-889090a6a9fa?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=686&q=80" alt="Side Image" class="side-image">
+      </div>
+  </div>
+</div>
+  
+     
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   </body>
 </html>
