--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -5,56 +5,108 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Welcome to my app </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  
+    <style>
+      .side-container {
+          background-color: rgb(0, 0, 0);
+          height: 100vh;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          padding: 20px;
+      }
+
+      .content-container {
+          background-color: rgb(255, 255, 255);
+          padding: 20px;
+          text-align: center;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center; 
+          height: 100vh;
+      }
+
+      .side-image {
+            width: 100%;
+            height: auto;
+        }
+
+        
+  </style>
+  
   </head>
   <body>
 
 <!-- As a heading -->
 <nav class="navbar bg-dark navbar-dark">
-    <div class="container-fluid">
-      <span class="navbar-brand mb-0 h1">Home</span>
-    </div>
-  </nav>
-    <h1 class="text-center text-success">Register App</h1>
-    <div class="container-fluid">
-        <form action="{% url "register" %}" method="POST" class="row g-3">
-          {% csrf_token %}
-            <div class="col-md-6">
-              <label for="first_name" class="form-label">First Name</label>
-              <input name="first_name" type="text" class="form-control" id="">
-            </div>
-            <div class="col-md-6">
-              <label for="" class="form-label">Last Name</label>
-              <input name="last_name" type="text" class="form-control" id="">
-            </div>
-            <div class="col-md-6">
-              <label for="" class="form-label">Email</label>
-              <input name="email" type="email" class="form-control" id="inputEmail4">
-            </div>
-            <div class="col-md-6">
-              <label for="" class="form-label">UserName</label>
-              <input name="username" type="username" class="form-control" id="">
-            </div>
-            <div class="col-md-6">
-              <label for="" class="form-label">Password</label>
-              <input name="password" type="password" class="form-control" id="">
-            </div>
-            <div class="col-md-6">
-              <label for="" class="form-label">Confirm password</label>
-              <input name="confirm_password" type="password" class="form-control" id="">
-            </div>
-            <div class="col-12">
-              <button type="submit" class="btn btn-success btn-lg">Create account</button>
-            </div>
-          </form>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">Home</a>
+  </div>
+</nav>
+<div class="container-fluid">
+  <div class="row">
+      <div class="col-sm-3 side-container">
+          <!-- Side area content goes here -->
+          <img src="https://images.unsplash.com/photo-1688325584752-889090a6a9fa?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=686&q=80" alt="Side Image" class="side-image">
+      </div>
+      <div class="col-sm-6 content-container">
+          <!-- Content area -->
+          <div class="container-fluid">
+            <h1 class="text-center">Fill the form</h1>
+            <form action="{% url "register" %}" method="POST" class="row g-3">
+              {% csrf_token %}
+                <div class="col-md-6">
+                  <label for="first_name" class="form-label">First Name</label>
+                  <input name="first_name" type="text" class="form-control" id="">
+                </div>
+                <div class="col-md-6">
+                  <label for="" class="form-label">Last Name</label>
+                  <input name="last_name" type="text" class="form-control" id="">
+                </div>
+                <div class="col-md-6">
+                  <label for="" class="form-label">Email</label>
+                  <input name="email" type="email" class="form-control" id="inputEmail4">
+                </div>
+                <div class="col-md-6">
+                  <label for="" class="form-label">UserName</label>
+                  <input name="username" type="username" class="form-control" id="">
+                </div>
+                <div class="col-md-6">
+                  <label for="" class="form-label">Password</label>
+                  <input name="password" type="password" class="form-control" id="">
+                </div>
+                <div class="col-md-6">
+                  <label for="" class="form-label">Confirm password</label>
+                  <input name="confirm_password" type="password" class="form-control" id="">
+                </div>
+                <div class="col-12">
+                  <button type="submit" class="btn btn-secondary">Create account</button>
+                </div>
+              </form>
+    
+              <div class="form-group">
+                  {% for message in messages %}
+                <div class="alert alert-danger" role="alert">
+                  {{message}}
+                </div>
+                {% endfor %}
+              </div>
+        </div>
+          
+      </div>
+      <div class="col-sm-3 side-container">
+          <!-- Side area content goes here -->
+          <img src="https://images.unsplash.com/photo-1688325584752-889090a6a9fa?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=686&q=80" alt="Side Image" class="side-image">
+      </div>
+  </div>
+</div>
+  
+     
 
-          <div class="form-group">
-              {% for message in messages %}
-            <div class="alert alert-danger" role="alert">
-              {{message}}
-            </div>
-            {% endfor %}
-          </div>
-    </div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   </body>
 </html>
